--- a/style.css
+++ b/style.css
@@ -229,3 +229,87 @@ h3 {
 .culture-description {
   margin: 0;
 }
+
+#vision {
+  margin: 80px auto;
+}
+
+#vision > div {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.vision-box {
+  width: 300px;
+  height: 300px;
+  margin-bottom: 30px;
+  position: relative;
+}
+
+.vision-box > img {
+  width: 100%;
+  position: relative;
+  z-index: 30;
+}
+
+.vision-box > div {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 31;
+  margin-right: 20px;
+}
+
+.vision-box > div > h4 {
+  color: #2710d5;
+  font-size: 19px;
+  margin: 80px 0 0 0;
+}
+
+.vision-box > div > h4::first-letter {
+  font-size: 40px;
+}
+
+.vision-box > div > h5 {
+  font-size: 20px;
+  margin: 0 0 0 0;
+}
+
+.vision-box > div > p {
+  margin: 10px 0 0 0;
+}
+
+#company {
+  margin: 80px auto;
+}
+
+#company-table {
+  width: 100%;
+}
+
+.tableheader {
+  text-align: left;
+  margin: 20px;
+  border-bottom: 1px solid #2710d5;
+  width: 100px;
+}
+
+.tableheader-first {
+  border-top: 1px solid #2710d5;
+}
+
+.cell {
+  padding: 30px;
+  border-bottom: 1px solid #ececec;
+}
+
+.cell-first {
+  border-top: 1px solid #ececec;
+}
+
+#company > iframe {
+  width: 100%;
+  height: 368px;
+  margin-top: 40px;
+}
