--- a/style.css
+++ b/style.css
@@ -313,3 +313,66 @@ h3 {
   height: 368px;
   margin-top: 40px;
 }
+
+#contact {
+  margin: 80px auto 80px auto;
+}
+
+#contact > form > div {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  padding-bottom: 30px;
+}
+
+.contact-heading {
+  width: 240px;
+  align-self: center;
+}
+
+.contact-label {
+  font-weight: bold;
+}
+
+.contact-span {
+  color: #ce2222;
+  margin-left: 20px;
+  font-weight: bold;
+}
+
+.contact-textbox {
+  border: 0;
+  border-bottom: 1px solid #707070;
+  background-color: #fafafa;
+  width: 400px;
+  height: 56px;
+}
+
+.contact-textarea {
+  border: 0;
+  border-bottom: 1px solid #707070;
+  background-color: #fafafa;
+  width: 400px;
+  height: 200px;
+}
+
+#contact dt {
+  font-weight: bold;
+}
+
+#contact dd {
+  margin-bottom: 16px;
+}
+
+#contact dd p {
+  margin: 0;
+}
+
+#contact dd ul {
+  padding-left: 0;
+}
+
+#contact dd li {
+  margin-bottom: 0;
+  list-style: none;
+}
